--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 server.port=3001
+
+spring.datasource.username=postgres
+spring.datasource.password=PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/fakePosts
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.default_schema=public
+
